--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Merit's Store</title>
   <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
   <style type="text/css">
     * {
       margin: 0;
@@ -188,7 +189,6 @@
     .why-us {
       padding: 120px 0;
       background: rgba(255, 255, 255, 0.8);
-      padding: 4rem 2rem;
       margin-top: 400px;
     }
 
@@ -254,6 +254,10 @@
       .why-us {
         padding: 60px 0;
       }
+    }
+    .why-us-title,
+    .why-us-text {
+      font-family: 'Montserrat', 'Rubik', Arial, sans-serif;
     }
   </style>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
