--- a/index.html
+++ b/index.html
@@ -4,267 +4,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Merit's Store</title>
+  <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
-  <style type="text/css">
-    * {
-      margin: 0;
-      box-sizing: border-box;
-      text-decoration: none;
-      padding: 0;
-    }
-    body {
-      margin: 0;
-      min-height: 100vh;
-      background: url('https://img.freepik.com/premium-photo/attractive-young-woman-holding-jar--camera-while-posing-studio-brown-wall-stock-photo_2221-8289.jpg') no-repeat;
-      background-size: cover;
-      background-position: 50% 50%;
-      width: 100%;
-    }
-    .navbar {
-      background: rgb(137, 207, 240);
-      font-family: 'Rubik', sans-serif;
-      padding: 15px 0;
-    }
-    .navdiv {
-      max-width: 1100px;
-      margin: 0 auto;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      gap: 0;
-      position: relative;
-    }
-    .left-nav {
-      display: flex;
-      align-items: center;
-      gap: 20px;
-    }
-    .logo {
-      flex: 0 0 auto;
-      margin-right: 0;
-    }
-
-    .logo a {
-      font-size: 28px;
-      color: white;
-      font-weight: bold;
-      font-family: 'Lobster', sans-serif;
-      text-decoration: none;
-    }
-    .box {
-      position: absolute;
-      left: 50%;
-      transform: translateX(-50%);
-      background-color: #eee;
-      width: 220px;
-      height: 36px;
-      border-radius: 50px;
-      display: flex;
-      align-items: center;
-      padding: 0 12px;
-      box-sizing: border-box;
-      z-index: 1;
-    }
-    .box input[type="text"] {
-      width: 100%;
-      border: none;
-      outline: none;
-      background: none;
-      font-size: 14px;
-      border-radius: 50px;
-      padding: 5px 6px;
-    }
-    .fa-solid {
-      color: #89cff0;
-      font-size: 20px;
-      margin-left: 10px;
-      transition: color 0.2s;
-    }
-    .fa-solid:hover {
-      color: #333;
-      cursor: pointer;
-    }
-    ul {
-      margin: 0;
-      padding: 0;
-      display: flex;
-      align-items: center;
-      gap: 10px;
-    }
-    li {
-      list-style: none;
-      display: inline-block;
-    }
-    .nav-links {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      justify-content: flex-end;
-      padding: 0 20px;
-      border-bottom: 2px solid transparent;
-    }
-
-    .nav-links li a {
-      color: white;
-      font-size: 14px; 
-      font-weight: bold;
-      margin-right: 10px;
-      transition: text-decoration none;
-      text-decoration: none; 
-      text-transform: uppercase;
-    }
-
-    nav  ul li a:hover {
-      color: white;
-      border-bottom: 2px solid #fff;
-      text-shadow: 0 0 10px white;
-    }
-
-    li:last-child a {
-      margin-right: 0;
-    }
-    li a:active,
-    li a:focus {
-      text-decoration: none;
-      outline: none;
-      border-bottom: none;
-    }
-    .fa-cart-shopping {
-      color: #fff !important;
-    }
-    .fa-user {
-      color: #fff !important;
-    }
-    @media (max-width: 700px) {
-      .navdiv {
-        flex-direction: column;
-        align-items: stretch;
-        gap: 10px;
-      }
-      .box {
-        margin: 10px 0;
-        width: 100%;
-        max-width: 100%;
-      }
-      ul {
-        justify-content: center;
-      }
-    }
-    .main {
-      position: relative;
-      top: 35%;
-      left: 90px;
-      padding: 5rem 2rem;
-      font-family: 'Rubik', sans-serif;
-    }
-    .main h1{
-      color: white;
-      font-size: 50px;
-      font-weight: 800;
-    }
-    .main h1 span {
-      color: #89cff0;
-      font-size: 60px;
-      font-weight: 900;
-    }
-
-    .main button {
-      background-color: #89cff0;
-      color: white;
-      border: none;
-      padding: 12px 20px;
-      font-size: 16px;
-      font-weight: 600;
-      border-radius: 2rem;
-      cursor: pointer;
-      transition: background-color 0.3s, transform .3s;
-      margin: 20px 0;
-    }
-    .main button:hover {
-      scale: 1.05;
-    }
-
-    /*Why us section styling*/
-    .why-us {
-      padding: 120px 0;
-      background: rgba(255, 255, 255, 0.8);
-      margin-top: 400px;
-    }
-
-    .why-us .section-content{
-      display: flex;
-      gap: 50px;
-      align-items: center;
-      justify-content: space-between;
-    }
-
-    .why-us .why-us-image-wrapper .why-us-image {
-      width: 400px;
-      height: 400px;
-      object-fit: cover;
-      border-radius: var(--radius, 20px);
-    }
-  
-   .why-us-title {
-      text-align: center;
-      padding: 20px 0 20px;
-      text-transform: uppercase;
-      font-size: 2rem;
-    }
-
-    .why-us-title::after{
-      content: "";
-      width: 80px;
-      height: 5px;
-      display: block;
-      margin: 10px auto 0;
-      background: #89cff0;
-    }
-    .why-us-text {
-      max-width: 500px;
-      margin: 0 auto;
-      font-size: 1.1rem;
-      color: #222;
-      line-height: 1.7;
-    }
-    .why-us-text .text {
-      margin-bottom: 1.2em;
-    }
-    @media (max-width: 900px) {
-      .why-us .section-content {
-        flex-direction: column;
-        gap: 30px;
-        text-align: center;
-      }
-      .why-us .why-us-image-wrapper .why-us-image {
-        width: 90vw;
-        max-width: 350px;
-        height: auto;
-      }
-    }
-    @media (max-width: 700px) {
-      .main {
-        position: static;
-        left: 0;
-        top: 0;
-        margin-top: 30px;
-        text-align: center;
-      }
-      .why-us {
-        padding: 60px 0;
-      }
-    }
-    .why-us-title,
-    .why-us-text {
-      font-family: 'Montserrat', 'Rubik', Arial, sans-serif;
-    }
-  </style>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
   <link href="https://fonts.googleapis.com/css?family=Rubik:400,700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <!-- Navbar -->
+
+  
   <nav class="navbar">
     <div class="navdiv">
       <div class="logo"><a href="#">Merit's Store</a></div>
@@ -292,13 +40,13 @@
     </div>
   </nav>
   
-  <!-- Main Content -->
+  
   <div class="main">
     <h1>Glow Naturally With <br> Science + <span>Nature !</span></h1>
     <button>Shop Now!</button>
   </div>
 
-  <!-- Why us section-->
+  
   <section class="why-us">
     <div class="section-content">
       <div class="why-us-image-wrapper">
@@ -312,5 +60,33 @@
       </div>
       </div>
     </section>
+
+    <footer class="footer">
+      <div class="col-1">
+        <h3>Quick Links</h3>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Products</a>
+        <a href="#">Contact Us</a>
+        <a href="#">Blog</a>
+      </div>
+      <div class="col-2">
+        <div class="footer-contact">
+         <h4>Contact Us</h4> 
+         <p>Email:support@meritsstore.com</p>
+         <p>Phone: +234-906-130-5967</p>
+        </div>
+
+         <div class="social-icons">
+         <i class="fa-brands fa-facebook"></i>
+         <i class="fa-brands fa-twitter"></i>
+         <i class="fa-brands fa-instagram"></i>
+         <i class="fa-brands fa-linkedin"></i>
+        </div>
+
+      <div class="footer-bottom">
+        <p>©2025 Merit's Store. All rights reserved.</p>
+      </div>
+    </footer>
 </body>
 </html>
